tests/rosetta/transpiler/FS/balanced-brackets.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/balanced-brackets.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Balanced-brackets' based on the file name 'balanced-brackets.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/balanced-brackets.fs(28,51): error FS0001: The type 'int64' does not match the type 'int'
